--- a/indexjp.html
+++ b/indexjp.html
@@ -5,7 +5,7 @@
 <style>
 body { background-color: black; }
 p{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -13,7 +13,7 @@ p{max-width: 390px;
 <style>
 body { background-color: black; }
 div{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -25,27 +25,27 @@ div{max-width: 390px;
 </head>
 
 <body>
-<p align="justify"><font color=#ff0080> <font face="menlo"> <font size=4>
-  型破りなワイン 🇷🇸 </font></p>
-<div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>重要です、必ずお読みください！</u></font></div>
+<div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+  <u>重要です、必ず読んでください！</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *すべてのボトルは手作業でペイントされており、それぞれ異なります。直接販売のみ、1注文につき1ボトルでお願いします:)</div>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *私はビジネスではなく、登録された会社も持っていません。ボトルはラベル表示基準に準拠していません。私は趣味でワインを作っているだけなので小売店で販売することはできません</p>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *ワインの試飲イベントや在庫のあるレストランの情報については<a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>をフォローしてください。ご注文はダイレクトメッセージで</p>
+   *ボトルは個別に作られており、それぞれ異なります;<div>私は小さなバッチを作ります / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
 
-<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> <font color=white><font size=2> 私が何をしているのかもっと知りましょう</div>
-<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>私が愛するワイン</u></a> <font color=white><font size=2> 仲間のワインメーカーへのエール</div>
-<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>あなたのスナップ</u></a> <font color=white><font size=2> my fave page, stop sending nudes tho</div>
-<div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>リンク</u></a><font color=white><font size=2> random fun stuff i found on the internets</div>
-<div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>アーカイブ</u></a> <font color=white><font size=2> page under construction</div>
-<p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>現在のラインナップ</u> <font color=white><font size=2> </p>
+<p align="center">
+<a href=aboutjp.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> 
+<a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
+<a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
+<a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
+<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>斉列</u></a></p>
 
-  <div align="center"><font size=3><s><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat - $40 / 295 DOGE</s> SOLD OUT! </font></div>
+  <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
+  <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
 
 
 
