--- a/indexjp.html
+++ b/indexjp.html
@@ -31,7 +31,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *ボトルは個別に作られており、それぞれ異なります;<div>私は小さなバッチを作ります / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</div>
+  *直販のみ / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / 世界網の積荷</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
 
@@ -40,10 +40,10 @@ div{max-width: 390px;
 <a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
 <a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
 <a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
-<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>斉列</u></a></p>
+<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>ワイン</u></a></p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
-  <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
+  <div align="justify"><font size=2><font color=white>ブドウ: プロクパック;酵母：EC-1118; SO<sub>2</sub> 添加: 0g;方法: セニエ; alc: ≈12%;残糖：1～3g</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
   <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
 
