--- a/indexjp.html
+++ b/indexjp.html
@@ -25,7 +25,7 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
 <div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>重要です、必ず読んでください！</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
