--- a/indexjp.html
+++ b/indexjp.html
@@ -31,7 +31,7 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *ボトルは個別に作られており、それぞれ異なります;<div>私は小さなバッチを作ります / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *直販のみ / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / 世界網の積荷</div>
+  *直販のみ / 暗号 <font color=white> / 世界網の積荷</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
 
