--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=5> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="right"><font color=#ff0080><font size=5> <a href=about.html>🇬🇧 </a> <a href=aboutfr.html>🇫🇷 </a> <a href=aboutru.html>🇷🇺 </a> <a href=aboutjp.html>🇯🇵 </a> <a href=aboutrs.html>🇷🇸</a></div>
 <div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>important, please read!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
