--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ div{max-width: 390px;
 </head>
 
 <body>
-
+<div align="right"><font color=#ff0080><font size=5> <a href=about.html>🇬🇧 </a> <a href=aboutfr.html>🇫🇷 </a> <a href=aboutru.html>🇷🇺 </a> <a href=aboutjp.html>🇯🇵 </a> <a href=aboutrs.html>🇷🇸</a></div>
 
 <p align="center"><font color=ff8000> <font face="menlo"> <font size=3><u>about</u> 
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
