--- a/about.html
+++ b/about.html
@@ -28,11 +28,12 @@ div{max-width: 390px;
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=about.html>🇬🇧 </a> <a href=aboutfr.html>🇫🇷 </a> <a href=aboutru.html>🇷🇺 </a> <a href=aboutjp.html>🇯🇵 </a> <a href=aboutrs.html>🇷🇸</a></div>
 
-<p align="center"><font color=ff8000> <font face="menlo"> <font size=3><u>about</u> 
+<div align="center">
+<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u> 
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></p>
+<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
 
 <img src="images/matija.png" style="width:390px;height:auto%;">
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
