--- a/yourphotos.html
+++ b/yourphotos.html
@@ -26,28 +26,20 @@ div{max-width: 390px;
 
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=yourphotos.html>🇬🇧 </a> <a href=yourphotosfr.html>🇫🇷 </a> <a href=yourphotosru.html>🇷🇺 </a> <a href=yourphotosjp.html>🇯🇵 </a> <a href=yourphotosrs.html>🇷🇸</a></div>
-<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>important, please read!</u></font></div>
-<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
-<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *direct sales only / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / worldwide shipping</div>
-<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
 
-<p align="center">
+<div align="center">
 <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></p>
+<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
 
-<div align="justify"><font color=white> <font face="menlo"> <font size=2>Endorfin, Belgrade, Feb 2024</font></div>
+<p><div align="justify"><font color=white> <font face="menlo"> <font size=2>Endorfin, Belgrade, Feb 2024</font></div>
 <img src="./images/endorfin.png" style="width:390px;height:auto%;">
      <div align="justify"><font color=white> <font face="menlo"> <font size=2>Friends from vino.rs, Belgrade, Feb 2024</font></div>
 <img src="./images/vinors.png" style="width:390px;height:auto%;">
         <div align="justify"><font color=white> <font face="menlo"> <font size=2>bday present for Mila, Belgrade, Feb 2024</font></div>
-<img src="./images/mila.png" style="width:390px;height:auto%;">
+<img src="./images/mila.png" style="width:390px;height:auto%;"></p>
 
 
 
