--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@ div{max-width: 390px;
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
 <a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
 
-<img src="images/matija.png" style="width:390px;height:auto%;">
+<p><img src="images/matija.png" style="width:390px;height:auto%;">
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *page under construction</font> </div>
+  *page under construction</font> </p>
 
 
 
