--- a/aboutjp.html
+++ b/aboutjp.html
@@ -29,11 +29,11 @@ div{max-width: 390px;
 <div align="right"><font color=#ff0080><font size=5> <a href=about.html>🇬🇧 </a> <a href=aboutfr.html>🇫🇷 </a> <a href=aboutru.html>🇷🇺 </a> <a href=aboutjp.html>🇯🇵 </a> <a href=aboutrs.html>🇷🇸</a></div>
 
 <div align="center">
-<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u> 
-<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
+<a href=aboutjp.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> 
+<a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
+<a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
+<a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
+<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>ワイン</u></a></div>
 
 <p><img src="images/matija.png" style="width:390px;height:auto%;">
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
