--- a/yourphotosjp.html
+++ b/yourphotosjp.html
@@ -28,11 +28,11 @@ div{max-width: 390px;
 <div align="right"><font color=#ff0080><font size=5> <a href=yourphotos.html>🇬🇧 </a> <a href=yourphotosfr.html>🇫🇷 </a> <a href=yourphotosru.html>🇷🇺 </a> <a href=yourphotosjp.html>🇯🇵 </a> <a href=yourphotosrs.html>🇷🇸</a></div>
 
 <div align="center">
-<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
-<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
+<a href=aboutjp.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> 
+<a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
+<a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
+<a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
+<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>ワイン</u></a></div>
 
 <p><div align="justify"><font color=white> <font face="menlo"> <font size=2>Endorfin, Belgrade, Feb 2024</font></div>
 <img src="./images/endorfin.png" style="width:390px;height:auto%;">
