--- a/indexfr.html
+++ b/indexfr.html
@@ -5,7 +5,7 @@
 <style>
 body { background-color: black; }
 p{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -13,7 +13,7 @@ p{max-width: 390px;
 <style>
 body { background-color: black; }
 div{max-width: 390px;
-  min-width: 390px;
+  min-width: 0px;
 }
 
 </style>
@@ -25,28 +25,27 @@ div{max-width: 390px;
 </head>
 
 <body>
-<p align="justify"><font color=#ff0080> <font face="menlo"> <font size=4>
-  UNCONVENTIONAL WINES </font></p>
-<div align="justify"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>Important, please read!</u></font></div>
+<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+  <u>important, lire svp!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *all bottles are painted by hand and differ from one another. direct sales only, <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *i'm not a business, i do not have a registered company, the bottles don't adhere 2 labeling standards; i'm just a guy making wine 4 fun & <font color=#ff0000>C<font color=#ff8000>A<font color=#ffff00>N<font color=#80ff00>N<font color=#0080ff>O<font color=#8000ff>T <font color=white>sell thru retailers</font>
-  </font> </p>
-<p align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *for wine tasting events & info on restaurants with stock, follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a>. DM 4 orders</p>
+   *les bouteilles sont fabriquées individuellement et sont différentes;je fais des petits lots, une bouteille par commande svp :) </div></div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *vente directe uniquement / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / livraison internationale</div>
+<div align="justify"> <font color=white> <font face="menlo"> <font size=2>
+  *suivre <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / message pour acheter</div>
 
-<div align="justify"> <a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about me</u></a> <font color=white><font size=2> find out more about what i do</div>
-<div align="justify"> <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>wines i love</u></a> <font color=white><font size=2> shoutouts to fellow winemakers</div>
-<div align="justify"> <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>your snaps</u></a> <font color=white><font size=2> my fave page, stop sending nudes tho</div>
-<div align="justify"> <a href=links.html><font color=00ff80> <font face="menlo"> <font size=3><u>links</u></a><font color=white><font size=2> random fun stuff i found on the internets</div>
-<div align="justify"> <a href=archive.html><font color=0080ff> <font face="menlo"> <font size=3><u>archive</u></a> <font color=white><font size=2> page under construction</div>
-<p align="justify"> <font color=8000ff> <font face="menlo"> <font size=3><u>current lineup</u> <font color=white><font size=2> </p>
+<p align="center">
+<a href=aboutfr.html><font color=ff8000> <font face="menlo"> <font size=3><u>sur moi</u></a> 
+<a href=winesilovefr.html><font color=ffff00> <font face="menlo"> <font size=3><u>bravos</u></a>
+<a href=yourphotosfr.html><font color=80ff00> <font face="menlo"> <font size=3><u>photos</u></a>
+<a href=linksfr.html><font color=0080ff> <font face="menlo"> <font size=3><u>liens</u></a>
+<a href=indexfr.html><font color=8000ff> <font face="menlo"> <font size=3><u>vins</u></a></p>
 
-  <div align="center"><font size=3><s><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat - $40 / 295 DOGE</s> SOLD OUT! </font></div>
-  <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
+  <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
+  <div align="justify"><font size=2><font color=white>cépage: prokupac; levure: EC-1118; soufre ajouté: 0g; méthode: saignée; alc: ≈12%; sucre résiduel: 1-3g</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
+  <div align="right"><font size=2><font color=white><s>$40</s> - épuisé</font></div>
 
 
 
