--- a/indexjp.html
+++ b/indexjp.html
@@ -45,7 +45,7 @@ div{max-width: 390px;
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét-Nat</font></div>
   <div align="justify"><font size=2><font color=white>ブドウ: プロクパック; 酵母：EC-1118; SO<sub>2</sub> 添加: 0g; 方法: セニエ; alc: ≈12%; 残糖:1～3g</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
-  <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
+  <div align="right"><font size=2><font color=white><s>$40</s> - 完売</font></div>
 
 
 
