--- a/linksfr.html
+++ b/linksfr.html
@@ -28,11 +28,11 @@ div{max-width: 390px;
 <div align="right"><font color=#ff0080><font size=5> <a href=links.html>🇬🇧 </a> <a href=linksfr.html>🇫🇷 </a> <a href=linksru.html>🇷🇺 </a> <a href=linksjp.html>🇯🇵 </a> <a href=linksrs.html>🇷🇸</a></div>
 
 <div align="center">
-<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
-<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
+<a href=aboutfr.html><font color=ff8000> <font face="menlo"> <font size=3><u>sur moi</u></a> 
+<a href=winesilovefr.html><font color=ffff00> <font face="menlo"> <font size=3><u>bravos</u></a>
+<a href=yourphotosfr.html><font color=80ff00> <font face="menlo"> <font size=3><u>photos</u></a>
+<a href=linksfr.html><font color=0080ff> <font face="menlo"> <font size=3><u>liens</u></a>
+<a href=indexfr.html><font color=8000ff> <font face="menlo"> <font size=3><u>vins</u></a></div>
 
   <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
 *how to synthesize <a href="links/MDMA.pdf"><font size=3>mdma</font></a></p>
