--- a/yourphotosfr.html
+++ b/yourphotosfr.html
@@ -28,11 +28,11 @@ div{max-width: 390px;
 <div align="right"><font color=#ff0080><font size=5> <a href=yourphotos.html>🇬🇧 </a> <a href=yourphotosfr.html>🇫🇷 </a> <a href=yourphotosru.html>🇷🇺 </a> <a href=yourphotosjp.html>🇯🇵 </a> <a href=yourphotosrs.html>🇷🇸</a></div>
 
 <div align="center">
-<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
-<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
+<a href=aboutfr.html><font color=ff8000> <font face="menlo"> <font size=3><u>sur moi</u></a> 
+<a href=winesilovefr.html><font color=ffff00> <font face="menlo"> <font size=3><u>bravos</u></a>
+<a href=yourphotosfr.html><font color=80ff00> <font face="menlo"> <font size=3><u>photos</u></a>
+<a href=linksfr.html><font color=0080ff> <font face="menlo"> <font size=3><u>liens</u></a>
+<a href=indexfr.html><font color=8000ff> <font face="menlo"> <font size=3><u>vins</u></a></div>
 
 <p><div align="justify"><font color=white> <font face="menlo"> <font size=2>Endorfin, Belgrade, Feb 2024</font></div>
 <img src="./images/endorfin.png" style="width:390px;height:auto%;">
