--- a/indexru.html
+++ b/indexru.html
@@ -33,19 +33,19 @@ div{max-width: 390px;
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *продажа напрямую / <font color=#ff0000>к<font color=#ff8000>р<font color=#ffff00>и<font color=#80ff00>п<font color=#0080ff>т<font color=8000ff>а<font color=white> / всемирная доставка</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</div>
+  *подписывайтесь на <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / для покупок, пишите в дм</div>
 
 <p align="center">
-<a href=aboutru.html><font color=ff8000> <font face="menlo"> <font size=3><u>о мне</u></a> 
-<a href=winesiloveru.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotosru.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=linksru.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=indexru.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></p>
+<a href=aboutru.html><font color=ff8000> <font face="menlo"> <font size=3><u>обо мне</u></a> 
+<a href=winesiloveru.html><font color=ffff00> <font face="menlo"> <font size=3><u>респект</u></a>
+<a href=yourphotosru.html><font color=80ff00> <font face="menlo"> <font size=3><u>фотки</u></a>
+<a href=linksru.html><font color=0080ff> <font face="menlo"> <font size=3><u>ссылки</u></a>
+<a href=indexru.html><font color=8000ff> <font face="menlo"> <font size=3><u>вина</u></a></p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
-  <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
+  <div align="justify"><font size=2><font color=white>сорт: прокупац / дрожжи: EC-1118 / добавка SO<sub>2</sub>: 0г / метод: кровопускание; алк: ≈12% / остаточный сахар: 1-3г</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
-  <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
+  <div align="right"><font size=2><font color=white><s>$40</s> - продано!</font></div>
 
 
 
