--- a/indexrs.html
+++ b/indexrs.html
@@ -36,11 +36,11 @@ div{max-width: 390px;
   *pratite <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / dm za porudžbine</div>
 
 <p align="center">
-<a href=aboutrs.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
-<a href=winesilovers.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotosrs.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=linksrs.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=indexrs.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></p>
+<a href=aboutrs.html><font color=ff8000> <font face="menlo"> <font size=3><u>o meni</u></a> 
+<a href=winesilovers.html><font color=ffff00> <font face="menlo"> <font size=3><u>pozz</u></a>
+<a href=yourphotosrs.html><font color=80ff00> <font face="menlo"> <font size=3><u>fotke</u></a>
+<a href=linksrs.html><font color=0080ff> <font face="menlo"> <font size=3><u>linkovi</u></a>
+<a href=indexrs.html><font color=8000ff> <font face="menlo"> <font size=3><u>u ponudi</u></a></p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>sorta: prokupac; kvasac: EC-1118; dodato SO<sub>2</sub>: 0g; methoda: saignée; alc: ≈12%; zaostali šećeri: 1-3g</font></div> 
