--- a/indexrs.html
+++ b/indexrs.html
@@ -29,7 +29,7 @@ div{max-width: 390px;
 <div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>važno, molim vas pročitajte!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *flaše se irzađuju pojedinačno, svaka je različita<div>radim male serije / 1 <font color=#ff0000>f<font color=#ff8000>l<font color=#ffff00>a<font color=#80ff00>j<font color=#00ff80>k<font color=#0080ff>a<font color=8000ff>e<font color=white> po porudžbini max :) </div></div>
+   *flaše se irzađuju pojedinačno / svaka je različita<div>radim male serije / <font color=#ff0000>1 <font color=#ff8000>f<font color=#ffff00>l<font color=#80ff00>a<font color=#00ff80>j<font color=#0080ff>k<font color=8000ff>a<font color=white> po porudžbini max :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *direktna prodaja / <font color=#ff0000>k<font color=#ff8000>r<font color=#ffff00>i<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / međunarodna dostava</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
