--- a/winesilovers.html
+++ b/winesilovers.html
@@ -28,11 +28,11 @@ div{max-width: 390px;
 <div align="right"><font color=#ff0080><font size=5> <a href=winesilove.html>🇬🇧 </a> <a href=winesilovefr.html>🇫🇷 </a> <a href=winesiloveru.html>🇷🇺 </a> <a href=winesilovejp.html>🇯🇵 </a> <a href=winesilovers.html>🇷🇸</a></div>
 
 <div align="center">
-<a href=about.html><font color=ff8000> <font face="menlo"> <font size=3><u>about</u></a> 
-<a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
-<a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
-<a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
+<a href=aboutrs.html><font color=ff8000> <font face="menlo"> <font size=3><u>o meni</u></a> 
+<a href=winesilovers.html><font color=ffff00> <font face="menlo"> <font size=3><u>pozz</u></a>
+<a href=yourphotosrs.html><font color=80ff00> <font face="menlo"> <font size=3><u>fotke</u></a>
+<a href=linksrs.html><font color=0080ff> <font face="menlo"> <font size=3><u>linkovi</u></a>
+<a href=indexrs.html><font color=8000ff> <font face="menlo"> <font size=3><u>u ponudi</u></a></div>
 
 <p align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *page under construction</font> </p>
