--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ div{max-width: 390px;
 <a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
 
 <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>important, please read!</u></font></div>
+  <u>important, please read!</u></font>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
@@ -43,8 +43,8 @@ div{max-width: 390px;
   *follow <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> 4 fun; dm 2 buy</p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
-  <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
+    <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
   <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
 
 
