--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ div{max-width: 390px;
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
 <a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a>
 <select>
-  <option href=index.html>🇬🇧</option>
-  <option value="indexfr.html">🇫🇷</option>
+  <option value="https://www.matija.wine/index.html">🇬🇧</option>
+  <option value="https://www.matija.wine/indexfr.html">🇫🇷</option>
 </select></div>
 
 <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
