--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@ div{max-width: 390px;
 <a href=winesilove.html><font color=ffff00> <font face="menlo"> <font size=3><u>shoutouts</u></a>
 <a href=yourphotos.html><font color=80ff00> <font face="menlo"> <font size=3><u>snaps</u></a>
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
-<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a>
-<select>
-  <option value="https://www.matija.wine/index.html">🇬🇧</option>
-  <option value="https://www.matija.wine/indexfr.html">🇫🇷</option>
-</select></div>
+<a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
 
 <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>important, please read!</u></font>
