--- a/indexfr.html
+++ b/indexfr.html
@@ -26,21 +26,22 @@ div{max-width: 390px;
 
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
-<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>important, lire svp!</u></font></div>
+
+<div align="center">
+<a href=aboutfr.html><font color=ff8000> <font face="menlo"> <font size=3><u>sur moi</u></a> 
+<a href=winesilovefr.html><font color=ffff00> <font face="menlo"> <font size=3><u>bravos</u></a>
+<a href=yourphotosfr.html><font color=80ff00> <font face="menlo"> <font size=3><u>photos</u></a>
+<a href=linksfr.html><font color=0080ff> <font face="menlo"> <font size=3><u>liens</u></a>
+<a href=indexfr.html><font color=8000ff> <font face="menlo"> <font size=3><u>vins</u></a></div>
+
+  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+  <u>important, lire svp!</u></font>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *les bouteilles sont fabriquées individuellement et sont différentes;je fais des petits lots, une bouteille par commande svp :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *vente directe uniquement / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / livraison internationale</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *suivre <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / message pour acheter</div>
-
-<p align="center">
-<a href=aboutfr.html><font color=ff8000> <font face="menlo"> <font size=3><u>sur moi</u></a> 
-<a href=winesilovefr.html><font color=ffff00> <font face="menlo"> <font size=3><u>bravos</u></a>
-<a href=yourphotosfr.html><font color=80ff00> <font face="menlo"> <font size=3><u>photos</u></a>
-<a href=linksfr.html><font color=0080ff> <font face="menlo"> <font size=3><u>liens</u></a>
-<a href=indexfr.html><font color=8000ff> <font face="menlo"> <font size=3><u>vins</u></a></p>
+  *suivre <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / message pour acheter</p>
 
   <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
   <div align="justify"><font size=2><font color=white>cépage: prokupac; levure: EC-1118; soufre ajouté: 0g; méthode: saignée; alc: ≈12%; sucre résiduel: 1-3g</font></div> 
