--- a/indexjp.html
+++ b/indexjp.html
@@ -25,26 +25,26 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
-<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div
+
+<div align="center">
+<a href=aboutjp.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> 
+<a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
+<a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
+<a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
+<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>ワイン</u></a></div>
+
+  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>重要です、必ず読んでください！</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *ボトルは個別に作られており、それぞれ異なります; 私は小さなバッチを作ります / 1注文につき1ボトルでお願いします:) </div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *直販のみ / 暗号 <font color=white> / 世界網の積荷</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *<a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> ページをフォローしてください。ダイレクトメッセージで購入してください</div>
-
-<p align="center">
-<a href=aboutjp.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> 
-<a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
-<a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
-<a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
-<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>ワイン</u></a></p>
-
-  <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét-Nat</font></div>
-  <div align="justify"><font size=2><font color=white>ブドウ: プロクパック; 酵母：EC-1118; SO<sub>2</sub> 添加: 0g; 方法: セニエ; alc: ≈12%; 残糖:1～3g</font></div> 
+  *<a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> ページをフォローしてください。ダイレクトメッセージで購入してください</p>
+  
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
+  <div align="justify"><font size=2><font color=white>ブドウ: プロクパック; 酵母：EC-1118; SO<sub>2</sub> 添加: 0g; 方法: セニエ; alc: ≈12%; 残糖:1～3g</font></div> 
   <div align="right"><font size=2><font color=white><s>$40</s> - 完売</font></div>
 
 
