--- a/indexrs.html
+++ b/indexrs.html
@@ -26,25 +26,25 @@ div{max-width: 390px;
 
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
-<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+
+<div align="center">
+<a href=aboutrs.html><font color=ff8000> <font face="menlo"> <font size=3><u>o meni</u></a> 
+<a href=winesilovers.html><font color=ffff00> <font face="menlo"> <font size=3><u>pozz</u></a>
+<a href=yourphotosrs.html><font color=80ff00> <font face="menlo"> <font size=3><u>fotke</u></a>
+<a href=linksrs.html><font color=0080ff> <font face="menlo"> <font size=3><u>linkovi</u></a>
+<a href=indexrs.html><font color=8000ff> <font face="menlo"> <font size=3><u>u ponudi</u></a></div>
+
+  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>važno, molim vas pročitajte!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *flaše se irzađuju pojedinačno / svaka je različita<div>radim male serije / <font color=#ff0000>1 <font color=#ff8000>f<font color=#ffff00>l<font color=#80ff00>a<font color=#00ff80>j<font color=#0080ff>k<font color=8000ff>a<font color=white> po porudžbini max :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *direktna prodaja / <font color=#ff0000>k<font color=#ff8000>r<font color=#ffff00>i<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / međunarodna dostava</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *pratite <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / dm za porudžbine</div>
-
-<p align="center">
-<a href=aboutrs.html><font color=ff8000> <font face="menlo"> <font size=3><u>o meni</u></a> 
-<a href=winesilovers.html><font color=ffff00> <font face="menlo"> <font size=3><u>pozz</u></a>
-<a href=yourphotosrs.html><font color=80ff00> <font face="menlo"> <font size=3><u>fotke</u></a>
-<a href=linksrs.html><font color=0080ff> <font face="menlo"> <font size=3><u>linkovi</u></a>
-<a href=indexrs.html><font color=8000ff> <font face="menlo"> <font size=3><u>u ponudi</u></a></p>
-
-  <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
-  <div align="justify"><font size=2><font color=white>sorta: prokupac; kvasac: EC-1118; dodato SO<sub>2</sub>: 0g; methoda: saignée; alc: ≈12%; zaostali šećeri: 1-3g</font></div> 
+  *pratite <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / dm za porudžbine</p>
+  
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
+  <div align="justify"><font size=2><font color=white>sorta: prokupac; kvasac: EC-1118; dodato SO<sub>2</sub>: 0g; methoda: saignée; alc: ≈12%; zaostali šećeri: 1-3g</font></div> 
   <div align="right"><font size=2><font color=white><s>$40</s> - prodato!</font></div>
 
 
