--- a/indexfr.html
+++ b/indexfr.html
@@ -37,9 +37,9 @@ div{max-width: 390px;
   <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>important, lire svp!</u></font>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-   *les bouteilles sont fabriquées individuellement et sont différentes;je fais des petits lots, une bouteille par commande svp :) </div></div>
+   *les bouteilles sont fabriquées individuellement et sont différentes / je fais des petits lots, 1 bouteille par commande svp :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *vente directe uniquement / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / livraison internationale</div>
+  *vente directe / <font color=#ff0000>c<font color=#ff8000>r<font color=#ffff00>y<font color=#80ff00>p<font color=#0080ff>t<font color=8000ff>o<font color=white> / livraison internationale</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *suivre <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / message pour acheter</p>
  
