--- a/indexru.html
+++ b/indexru.html
@@ -26,25 +26,25 @@ div{max-width: 390px;
 
 <body>
 <div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
-<div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>важно, прочтите пожалуйста!</u></font></div>
+
+<div align="center">
+<a href=aboutru.html><font color=ff8000> <font face="menlo"> <font size=3><u>обо мне</u></a> 
+<a href=winesiloveru.html><font color=ffff00> <font face="menlo"> <font size=3><u>респект</u></a>
+<a href=yourphotosru.html><font color=80ff00> <font face="menlo"> <font size=3><u>фотки</u></a>
+<a href=linksru.html><font color=0080ff> <font face="menlo"> <font size=3><u>ссылки</u></a>
+<a href=indexru.html><font color=8000ff> <font face="menlo"> <font size=3><u>вина</u></a></div>
+
+  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+  <u>важно, прочтите пожалуйста!</u></font>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *бутылки изготавливаются индивидуально и они все разные;<div>я делаю небольшие партии / продажа ограничена на 1 бутылку по покупателю :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
   *продажа напрямую / <font color=#ff0000>к<font color=#ff8000>р<font color=#ffff00>и<font color=#80ff00>п<font color=#0080ff>т<font color=8000ff>а<font color=white> / всемирная доставка</div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
-  *подписывайтесь на <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / для покупок, пишите в дм</div>
-
-<p align="center">
-<a href=aboutru.html><font color=ff8000> <font face="menlo"> <font size=3><u>обо мне</u></a> 
-<a href=winesiloveru.html><font color=ffff00> <font face="menlo"> <font size=3><u>респект</u></a>
-<a href=yourphotosru.html><font color=80ff00> <font face="menlo"> <font size=3><u>фотки</u></a>
-<a href=linksru.html><font color=0080ff> <font face="menlo"> <font size=3><u>ссылки</u></a>
-<a href=indexru.html><font color=8000ff> <font face="menlo"> <font size=3><u>вина</u></a></p>
-
-  <div align="center"><font size=3><font color=#ff00ff>P<font color=#ff0080>I<font color=#ff0000>N<font color=#ff8000>K <font color=#ffff00>E<font color=#00ff00>C<font color=00ff80>S<font color=#00ffff>T<font color=#0080ff>A<font color=#0000ff>S<font color=#8000ff>Y<font color=white> Pét Nat</font></div>
-  <div align="justify"><font size=2><font color=white>сорт: прокупац / дрожжи: EC-1118 / добавка SO<sub>2</sub>: 0г / метод: кровопускание; алк: ≈12% / остаточный сахар: 1-3г</font></div> 
+  *подписывайтесь на <a href=https://www.instagram.com/matija.wine/><font color=#0080ff><u>@matija.wine</u></font></a> / для покупок, пишите в дм</p>
+  
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
+  <div align="justify"><font size=2><font color=white>сорт: прокупац / дрожжи: EC-1118 / добавка SO<sub>2</sub>: 0г / метод: кровопускание; алк: ≈12% / остаточный сахар: 1-3г</font></div> 
   <div align="right"><font size=2><font color=white><s>$40</s> - продано!</font></div>
 
 
