--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ div{max-width: 390px;
 
   
     <img src="images/pinkecstasy.gif" style="width:390px;height:auto%;">
-    <div align="justify"><font size=2><font color=white>grapes: prokupac; yeast: EC-1118; added SO<sub>2</sub>: 0g; method: saignée; alc: ≈12%; residual sugar: 1-3g</font></div> 
+    <div align="justify"><font size=2><font color=white>extra brut / saignée rosé / prokupac / 0 added SO<sub>2</sub> / 12% alc</div> 
   <div align="right"><font size=2><font color=white><s>$40</s> - SOLD OUT!</font></div>
 
 
