--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ div{max-width: 390px;
 <a href=links.html><font color=0080ff> <font face="menlo"> <font size=3><u>links</u></a>
 <a href=index.html><font color=8000ff> <font face="menlo"> <font size=3><u>lineup</u></a></div>
 
-<p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
+<p><div align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
   <u>important, please read!</u></font>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
