--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ div{max-width: 390px;
 </head>
 
 <body>
-  <div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+  <div align="left"><font color=#ff0080><font size=4> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
 
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *bottles are made individually & are different;<div>i do small batches / <font color=#ff0000>1 <font color=#ff8000>b<font color=#ffff00>o<font color=#80ff00>t<font color=#00ff80>t<font color=#0080ff>l<font color=8000ff>e<font color=white> per order please :) </div></div>
