--- a/indexjp.html
+++ b/indexjp.html
@@ -25,17 +25,8 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div
+<div align="left"><font color=#ff0080><font size=4> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div
 
-<div align="center">
-<a href=aboutjp.html><font color=ff8000> <font face="menlo"> <font size=3><u>私について</u></a> 
-<a href=winesilovejp.html><font color=ffff00> <font face="menlo"> <font size=3><u>シャウトアウト</u></a>
-<a href=yourphotosjp.html><font color=80ff00> <font face="menlo"> <font size=3><u>写真</u></a>
-<a href=linksjp.html><font color=0080ff> <font face="menlo"> <font size=3><u>リンク</u></a>
-<a href=indexjp.html><font color=8000ff> <font face="menlo"> <font size=3><u>ワイン</u></a></div>
-
-  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>重要です、必ず読んでください！</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *ボトルは個別に作られており、それぞれ異なります; 私は小さなバッチを作ります / 1注文につき1ボトルでお願いします:) </div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
