--- a/indexfr.html
+++ b/indexfr.html
@@ -25,7 +25,7 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=4> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="left"><font color=#ff0080><font size=4> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
 
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *les bouteilles sont fabriquées individuellement et sont différentes / je fais des petits lots, 1 bouteille par commande svp :) </div></div>
