--- a/indexrs.html
+++ b/indexrs.html
@@ -25,17 +25,8 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="left"><font color=#ff0080><font size=4> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
 
-<div align="center">
-<a href=aboutrs.html><font color=ff8000> <font face="menlo"> <font size=3><u>o meni</u></a> 
-<a href=winesilovers.html><font color=ffff00> <font face="menlo"> <font size=3><u>pozz</u></a>
-<a href=yourphotosrs.html><font color=80ff00> <font face="menlo"> <font size=3><u>fotke</u></a>
-<a href=linksrs.html><font color=0080ff> <font face="menlo"> <font size=3><u>linkovi</u></a>
-<a href=indexrs.html><font color=8000ff> <font face="menlo"> <font size=3><u>u ponudi</u></a></div>
-
-  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>važno, molim vas pročitajte!</u></font></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *flaše se irzađuju pojedinačno / svaka je različita<div>radim male serije / <font color=#ff0000>1 <font color=#ff8000>f<font color=#ffff00>l<font color=#80ff00>a<font color=#00ff80>j<font color=#0080ff>k<font color=8000ff>a<font color=white> po porudžbini max :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
