--- a/indexru.html
+++ b/indexru.html
@@ -25,17 +25,8 @@ div{max-width: 390px;
 </head>
 
 <body>
-<div align="right"><font color=#ff0080><font size=5> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
+<div align="left"><font color=#ff0080><font size=4> <a href=index.html>🇬🇧 </a> <a href=indexfr.html>🇫🇷 </a> <a href=indexru.html>🇷🇺 </a> <a href=indexjp.html>🇯🇵 </a> <a href=indexrs.html>🇷🇸</a></div>
 
-<div align="center">
-<a href=aboutru.html><font color=ff8000> <font face="menlo"> <font size=3><u>обо мне</u></a> 
-<a href=winesiloveru.html><font color=ffff00> <font face="menlo"> <font size=3><u>респект</u></a>
-<a href=yourphotosru.html><font color=80ff00> <font face="menlo"> <font size=3><u>фотки</u></a>
-<a href=linksru.html><font color=0080ff> <font face="menlo"> <font size=3><u>ссылки</u></a>
-<a href=indexru.html><font color=8000ff> <font face="menlo"> <font size=3><u>вина</u></a></div>
-
-  <p align="left"><font color=#ff0000> <font face="menlo"> <font size=3>
-  <u>важно, прочтите пожалуйста!</u></font>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
    *бутылки изготавливаются индивидуально и они все разные;<div>я делаю небольшие партии / продажа ограничена на 1 бутылку по покупателю :) </div></div>
 <div align="justify"> <font color=white> <font face="menlo"> <font size=2>
